# arvisual-obs

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  build-local-windows-vs2026.bat  build-local-windows.bat  buildspec.json  create-public-repo-github.bat  install-vs2022-buildtools.bat
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml  visual_preset_request.md
.github/workflows/: apply-v059-hardening.yml  build-windows.yml  pages.yml  quality.yml  release.yml
data/effects/: arvisual.effect
data/locale/: en-US.ini  id-ID.ini
docs/: ENGINE.md  INSTALL.md  QUICK_START.md  RELEASE.md  TROUBLESHOOTING.md  app.js  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css
packaging/windows/: arvisual.iss
scripts/: apply-v059-hardening.py  build-local-windows.ps1  check-windows-build-env.ps1  create-public-repo-gh.ps1  package-windows.ps1  validate-color-safety.py  validate-repository.py
src/: arvisual-filter.cpp  plugin-main.cpp
